# rust-sample-project

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
migrations/: 20250811030223_users.up.sql  20250811030819_add_users.down.sql  20250811030819_add_users.up.sql  20250812101749_update_fields_users_table.down.sql  20250812101749_update_fields_users_table.up.sql
src/: main.rs
src/controllers/: error.rs  mod.rs  response.rs
src/controllers/authentication/: authentication_controller.rs  mod.rs  user_login_request.rs
src/controllers/users/: mod.rs  user_info_request.rs  users_controller.rs
src/domain/: mod.rs  users_entity.rs
src/middlewares/: authentication.rs  logging.rs
