[package]
name = "demo"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
log = "0.4.27"
dotenv = "0.15.0"
tracing-subscriber = {version="0.3", features = ["env-filter"]}
thiserror = "2.0.14"
validator = { version = "0.20.0", features = ["derive"] }
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
chrono = "0.4.41"
bcrypt = "0.17.0"
actix-cors = "0.7.1"